添加 常用的加密算法

--- a/app/src/main/assets/html.html
+++ b/app/src/main/assets/html.html
@@ -7,6 +7,7 @@ function upperCase(){
     var string =x.value.toUpperCase();
     <!--回调java中的的upperCaseJava接口里面的upperCaseJava方法-->
     window.upperCaseJava.upperCaseJava(string);
+    <!--window.alert(string);-->
 }
 
     </script>
